--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.6.0",
     "@fontsource-variable/rubik": "^5.0.21",
+    "@vercel/analytics": "^1.3.1",
     "astro": "^4.4.4",
     "astro-robots-txt": "^1.0.0",
     "tailwindcss": "^3.4.1",
